# tibot_detector_person

./: CMakeLists.txt
src/: main.cpp
